[project]
name = "gitWebhook"
version = "0.1"
authors = [
  { name="TCA", email="tca.youtub@gmail.com" },
]
description = "Flask blueprints for handling GitHub and GitLab webhooks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: CC BY 4.0 Attribution",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask"
]

[project.urls]
Homepage = "https://github.com/TCA166/gitWebhook"

[tool.setuptools.packages.find]
where = ["src"]

