[project]
name = "gitAppWebhook"
version = "0.1"
authors = [
  { name="TCA", email="tca.youtub@gmail.com" },
]
description = "Flask blueprints for handling GitHub and GitLab webhooks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free To Use But Restricted",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask"
]

[project.urls]
Homepage = "https://github.com/TCA166/gitWebhook"

[options]
package_dir = src

